[Core/Scripts] Added full script for General Husam and the base script for Siamat.

--- a/src/server/scripts/Kalimdor/CMakeLists.txt
+++ b/src/server/scripts/Kalimdor/CMakeLists.txt
@@ -69,6 +69,8 @@ set(scripts_STAT_SRCS
   Kalimdor/LostCityOfTheTolvir/lost_city_of_the_tolvir.cpp
   Kalimdor/LostCityOfTheTolvir/lost_city_of_the_tolvir.h
   Kalimdor/LostCityOfTheTolvir/boss_lockmaw.cpp
+  Kalimdor/LostCityOfTheTolvir/boss_hussam.cpp
+  Kalimdor/LostCityOfTheTolvir/boss_siamat.cpp
   Kalimdor/LostCityOfTheTolvir/boss_high_prophet_barim.cpp
 
   Kalimdor/HallsOfOrigination/instance_halls_of_origination.cpp
