[Core/Scripts] Start work on vashj'ir
* Sea Legs now works only in vashj'ir.

* Worgens now know the flight path to Lan'danel.

* Add script to Recruiter Burns until we script the intro to vashj'ir

--- a/src/server/scripts/EasternKingdoms/CMakeLists.txt
+++ b/src/server/scripts/EasternKingdoms/CMakeLists.txt
@@ -286,6 +286,7 @@ set(scripts_STAT_SRCS
   EasternKingdoms/Zones/elwynnforest.cpp
   EasternKingdoms/Zones/dun_morogh.cpp 
   EasternKingdoms/Zones/tirisfal_glades.cpp
+  EasternKingdoms/Zones/vashjir.cpp
 )
 
 message("  -> Prepared: Eastern Kingdoms")
